update add validasi for scurity and ubah param id to id unik
