# docs/swagger.json
@@ -1260,7 +1260,10 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/reqmodel.CreateProductDiscountApplied"
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/reqmodel.CreateProductDiscountApplied"
+                            }
                         }
                     }
                 ],
